--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: rgba(36, 36, 64, 1);
-  --primary-foreground: rgba(221, 190, 233, 0.25);
+  --primary-foreground: hsla(283, 49%, 83%, 0.25);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
